@@ -56,6 +56,8 @@ Bug Fixes
 * SOLR-10114: Reordered delete-by-query causes inconsistenties between shards that have 
   child documents (Mano Kovacs, Mihaly Toth, yonik)
 
+* SOLR-10159: When DBQ is reordered with an in-place update, upon whose updated value the DBQ is based
+  on, the DBQ fails due to excessive caching in DeleteByQueryWrapper (Ishan Chattopadhyaya)
 
 Optimizations
 ----------------------
